--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
             <url>https://opensource.org/licenses/Apache-2.0</url>
         </license>
     </licenses>
-    <url>https://wiki.jenkins.io/display/JENKINS/Pipeline+timeline</url>
+    <url>https://github.com/jenkinsci/pipeline-timeline-plugin/</url>
     <scm>
         <connection>scm:git:git://github.com/jenkinsci/jenkins-timeline-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/jenkins-timeline-plugin.git</developerConnection>
